# SonicUX

./: .gitignore  Cargo.toml  LICENSE  PRD.md  PRD_V3.md  README.md  architecture_diagrams.md  consumer_example.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/sonic-ux-core/: Cargo.toml
crates/sonic-ux-core/src/: engine.rs  events.rs  harmony.rs  lib.rs  smoothing.rs  types.rs
crates/sonic-ux-wasm/: Cargo.toml
crates/sonic-ux-wasm/src/: lib.rs
docs/: API.md  IMPLEMENTATION_CHECKLIST.md  PRD_V2.md
examples/basic/: index.html  main.ts
examples/basic-usage/: index.html  main.js
js/src/: types.d.ts
src/: index.ts  types.ts
src/behaviors/: arpeggio.ts  chord-pad.ts  continuous.ts  drone.ts  hover-sound.ts  pluck.ts
src/core/: harmony.ts  synth-engine.ts  tracker.ts
src/debug/: overlay.ts
src/presets/: ambient.ts  dramatic.ts  glitchy.ts  index.ts  playful.ts
src/voices/: index.ts
